--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/streamingservice?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+db.url=jdbc:mysql://localhost:3306/streamingdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 db.user=root
-db.password=root
+db.password=Kage!
 
